--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Lorem Ipsum
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+
+    <title>Lampen</title>
+</head>
+<body>
+    <div class="red">hello world</div>
+</body>
+</html>
