--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,14 +14,20 @@
     <div class="gototopcontainer">
         <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
     </div>
-    <!--Galerie-->
+    <!--Galerie
     <div>
         <img src="../Images/Denovo.jpg" width="90%" height="3000px">
     </div>
-
-
-
-    <div class="flex">
+    -->
+    <div id="navigation-container">
+        <a href="#" class="navigation-item">Angebote</a>
+        <a href="#" class="navigation-item">Kompetenzen</a>
+        <a href="#" class="navigation-item">Referenzen</a>
+        <a href="#" class="navigation-item">Team</a>
+        <a href="#" class="navigation-item">Downloads</a>
+        <img style="margin-left: auto;" src="../Images/Logo.png">
+    </div>
+    <!-- <div class="flex">
         <div class="flex2">
          
         </div>
@@ -34,5 +40,6 @@
             </div>
         </div>
     </div>
+    -->
 </body>
 </html>
