working swiper proto

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,12 +14,8 @@
     <div class="gototopcontainer">
         <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
     </div>
-    <!--Galerie
-    <div>
-        <img src="../Images/Denovo.jpg" width="90%" height="3000px">
-    </div>
-    -->
-    <div id="navigation-container">
+
+    <div class="navigation-container" id="navigation-container">
         <a href="#" class="navigation-item">Angebote</a>
         <a href="#" class="navigation-item">Kompetenzen</a>
         <a href="#" class="navigation-item">Referenzen</a>
@@ -27,6 +23,8 @@
         <a href="#" class="navigation-item">Downloads</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
+
+     
     <!-- <div class="flex">
         <div class="flex2">
          
