--- a/Slide/index.html
+++ b/Slide/index.html
@@ -15,12 +15,6 @@
 
     <!-- Demo styles -->
     <style>
-      html,
-      body {
-        position: relative;
-        height: 100%;
-      }
-
       body {
         background: #eee;
         font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -57,10 +51,10 @@
         object-fit: cover;
       }
 
-      .swiper-slide img {
+      .swiper-slide {
         display: block;
         width: 100%;
-        height: 100%;
+        height: 600px;
         object-fit: cover;
       }
 
