--- a/HTML/index.html
+++ b/HTML/index.html
@@ -46,24 +46,40 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-      <!-- Initialize Swiper -->
-  
-
-     
-    <!-- <div class="flex">
-        <div class="flex2">
-         
-        </div>
-        <div class="flex2">
-            <img src="">
-            <div>
-                <h1>Schlafzimmer</h1> 
-                <br>
-                TEEEEEEEEEEEEEEEEEEEEEEEEEEEEEXt
+        <br>
+        <div class="container">
+            <div class="container2">
+                <div class="container3">
+                        <img class="imgitem" src="../Images/Samuel.jpg">
+                    <div class="item" style="flex-grow: 2;">
+                        <h2>Wohnzimmer</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad
+                        </p>
+                    </div>
+                </div>
+                <div class="container3">
+                    <div class="item" style="flex-grow: 2;">
+                        <h2>Badezimmer</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad
+                        </p>
+                    </div>
+                        <img class="imgitem" src="../Images/Denovo.jpg">
+                </div>
+            </div>
+            <div class="container4">
+                <img class="imgitem2" src="../Images/Nathan.jpg">
+                <div class="item" style="flex-grow: 2;">
+                    <h2>Schlafzimmer</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an.
+                        Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an.
+                        Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    -->
 
     <script>
         var swiper = new Swiper(".mySwiper", {
