flex good, gototopbtn hidden behind swiper

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,9 +10,6 @@
     <script src="../Scripts/fontA.js"></script>
     <script src="../Scripts/slidescript.js"></script>
 
-
-
-
     <title>Lampen</title>
 </head>
 <body>
@@ -49,23 +46,23 @@
         <br>
         <div class="container">
             <div class="container2">
-                <div class="container3">
-                        <img class="imgitem" src="../Images/Samuel.jpg">
+                <div class="container3 item-r">
+                    <img class="imgitem img-r" src="../Images/Samuel.jpg">
                     <div class="item" style="flex-grow: 2;">
                         <h2>Wohnzimmer</h2>
                         <p>
                             Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad
                         </p>
                     </div>
-                </div>
-                <div class="container3">
+                </div> 
+                <div class="container3 item-l">
                     <div class="item" style="flex-grow: 2;">
-                        <h2>Badezimmer</h2>
+                        <h2>Badezimmer</h2> 
                         <p>
                             Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad
                         </p>
                     </div>
-                        <img class="imgitem" src="../Images/Denovo.jpg">
+                        <img class="imgitem img-l" src="../Images/Denovo.jpg">
                 </div>
             </div>
             <div class="container4">
