--- a/HTML/Produktion.html
+++ b/HTML/Produktion.html
@@ -20,13 +20,15 @@
         <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
         <a href="#" class="navigation-item">Produktion</a>
         <a href="Team.html" class="navigation-item">Team</a>
-        <a href="Kontankt.html" class="navigation-item">Kontakt</a>
+        <a href="Kontakt.html" class="navigation-item">Kontakt</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
 
 
     <footer>
-        <img class="footerlogo" src="../Images/Logo.png">
+        <div class="background-circle">
+            <img class="footerlogo" src="../Images/Logo.png">
+        </div>
         <div class="footertext"></div>
             <p> &copy; 2022 Schuber, Inc. <br>
         </div>
