--- a/HTML/Über uns.html
+++ b/HTML/Über uns.html
@@ -26,7 +26,9 @@
 
 
     <footer>
-        <img class="footerlogo" src="../Images/Logo.png">
+        <div class="background-circle">
+            <img class="footerlogo" src="../Images/Logo.png">
+        </div>
         <div class="footertext"></div>
             <p> &copy; 2022 Schuber, Inc. <br>
         </div>
