--- a/HTML/index.html
+++ b/HTML/index.html
@@ -112,7 +112,7 @@
         </div>
         <hr>
         <div class="footer-container" id="navigation-container">
-            <a href="#" class="footer-item">DATENSCHUTZRICHTLINIE</a>
+            <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
             <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
             <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
             <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
