--- a/HTML/Team.html
+++ b/HTML/Team.html
@@ -33,7 +33,7 @@
             <p> &copy; 2022 Schuber, Inc. <br>
         </div>
         <div class="footer-container" id="navigation-container">
-            <a href="#" class="footer-item">DATENSCHUTZRICHTLINIE</a>
+            <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
             <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
             <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
             <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
