--- a/HTML/Kontakt.html
+++ b/HTML/Kontakt.html
@@ -24,10 +24,33 @@
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
 
+    <div class="number">
+        <h1>Kontakt</h1>
+        <hr>
+        Um mit uns in Kontakt zu treten, verwenden Sie bitte entweder das Kontaktformular oder rufen uns auf folgenden Nummern an: <br><br>
 
+        <div class="number">
+            <div class="numbercontainer">
+                <div>
+                    <p>Administation:</p>
+                    <p>Techische Fragen:</p>
+                    <p>Bestellung:</p>
+                </div>
+                <div> 
+                    <p>041 555 25 05</p>
+                    <p>041 555 25 06</p>
+                    <p>041 555 25 07</p>
+                </div>
+            </div>
+           
+        </div>
+        
+    </div>
     <footer>
         <div class="background-circle">
-            <img class="footerlogo" src="../Images/Logo.png">
+            <a href="index.html">
+                <img class="footerlogo" src="../Images/Logo.png">
+            </a>
         </div>
         <div class="footertext"></div>
             <p> &copy; 2022 Schuber, Inc. <br>
