--- a/HTML/Produkte & Dienstleistungen.html
+++ b/HTML/Produkte & Dienstleistungen.html
@@ -68,7 +68,9 @@
 
     <footer>
         <div class="background-circle">
-            <img class="footerlogo" src="../Images/Logo.png">
+            <a href="index.html">
+                <img class="footerlogo" src="../Images/Logo.png">
+            </a>
         </div>
         <div class="footertext"></div>
             <p> &copy; 2022 Schuber, Inc. <br>
