--- a/HTML/Produktion.html
+++ b/HTML/Produktion.html
@@ -7,81 +7,58 @@
     <link rel="stylesheet" href="../Styles/style.css">
     <script src="../Scripts/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
-    <title>Produktion</title>
+    <title>Produkte & Dienstleistungen</title>
 </head>
 <body>
     <div class="gototopcontainer">
         <div class="gototopbtn" onclick="gototop()" id="gototopbtn"><i class="fa fa-arrow-up"></i></div>
     </div>
+
     <div class="navigation-container" id="navigation-container">
         <a href="index.html" class="navigation-item">Startseite</a>
-        <a href="Über uns.html" class="navigation-item">Über uns</a>
+        <a href="#" class="navigation-item">Über uns</a>
         <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
-        <a href="#" class="navigation-item">Produktion</a>
+        <a href="Produktion.html" class="navigation-item">Produktion</a>
         <a href="Team.html" class="navigation-item">Team</a>
-        <a href="Kontakt.html" class="navigation-item">Kontakt</a>
+        <a href="Kontankt.html" class="navigation-item">Kontakt</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
-    <div class="center">
-        <div class="leitbildtxt"><h1>&Uuml;ber Uns</h1>
-                Die Schuber Lampen AG widmet sich als Teil der Schuber Holding seit 10 Jahren der Herstellung von modischen Lampen f&uuml;r das bewusste Wohnen. 
-                Zusammen mit internationalen Spezialisten entwickeln wir zeitlose Designs verbunden mit h&ouml;chstem Komfort. F&uuml;r ein einmaliges Lichterlebnis! 
-        </div>
-   
-        <h1>Unsere Ziele</h1>
-        <hr>
-        <div class="Ziele-Container">
-            <div style="background-color: rgba(48, 224, 121, 0.514);">
-                <h1>Gleicheit</h1>
-                <hr>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod temporLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            </div>
-            <div style="background-color: rgba(228, 72, 72, 0.623);">
-                <h1>Innovation</h1>
-                <hr>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod temporLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            </div>
-            <div style="background-color: rgba(77, 158, 233, 0.616);">
-                <h1>Desing</h1>
-                <hr>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod temporLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-            </div>
-        </div>
-        
-    </div>
-    
-</body>
-<footer>
-    <div class="background-circle">
-        <img class="footerlogo" src="../Images/Logo.png">
-    </div>
-    <div class="footertext"></div>
-        <p> &copy; 2022 Schuber, Inc. <br>
-    </div>
-    <div class="footer-container" id="navigation-container">
-        <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
-        <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
-        <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
-        <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
-    </div>
 
-    <div class="footer-container" id="navigation-container">
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
-            <ion-icon class="footer-item" name="logo-youtube"></ion-icon>    
-        </a>
-        <a href="https://twitter.com/rickastley" target="blank">
-            <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
-        </a>
-        <a href="https://www.facebook.com/RickAstley" target="blank">
-            <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
-        </a>
-        <a href="https://www.instagram.com/officialrickastley/" target="blank">
-            <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
-        </a>
-        <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
-            <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>  
-        </a>
-    </div>
-</footer>
+
+    <footer>
+        <div class="background-circle">
+            <a href="index.html">
+                <img class="footerlogo" src="../Images/Logo.png">
+            </a>
+        </div>
+        <div class="footertext"></div>
+            <p> &copy; 2022 Schuber, Inc. <br>
+        </div>
+        <div class="footer-container" id="navigation-container">
+            <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
+            <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
+            <a href="#" class="footer-item">COOKIE-RICHTLINIE</a>
+            <a href="#" class="footer-item">FIRMENINFORMATIONEN</a>
+        </div>
+
+        <div class="footer-container" id="navigation-container">
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
+                <ion-icon class="footer-item" name="logo-youtube"></ion-icon>    
+            </a>
+            <a href="https://twitter.com/rickastley" target="blank">
+                <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
+            </a>
+            <a href="https://www.facebook.com/RickAstley" target="blank">
+                <ion-icon href="#" class="footer-item" name="logo-facebook"></ion-icon>
+            </a>
+            <a href="https://www.instagram.com/officialrickastley/" target="blank">
+                <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
+            </a>
+            <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
+                <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>  
+            </a>
+        </div>
+    </footer>
+
+</body>
 </html>
