team kinda okay

--- a/HTML/Produkte & Dienstleistungen.html
+++ b/HTML/Produkte & Dienstleistungen.html
@@ -32,8 +32,33 @@
         <p>Wir verwenden ausschliesslich Ressourcen aus Nachhaltigem Abbau welche wir zu fairen Konditionen einkaufen. Mit unseren internationalen Partnern verbindet uns eine langjährige Zusammenarbeit, welche von beiden Seiten geschätzt wird. </p>
         <br>
         <p>Unsere preisgekrönten Designer leben und arbeiten in diversen Städten verteilt um die ganze Welt. Aufgrund der verschiedenen kulturellen Eindrücke, welche jeder Einzelne ins Team bringt sind unsere Designs weltweit einzigartig! </p>
-
-        <h1 class="">Unsere Produkte</h1>
+        <br>
+        <h1>SmartSchuber&trade;</h1>
+        <hr>
+        <br>
+        <div class="smartcontainer">
+            <div>
+                <div>
+                    <h1>Vorteile</h1>
+                </div>
+                <ul>
+                    <li>Steuerung per Smartphone</li>
+                    <li>Steuerung per Zeitschaltuhr</li>
+                    <li>Übersicht des Stromverbrauchs</li>
+                    <li>Einbrecherschutzfunktion</li>
+                </ul>
+            </div>
+            <div>
+                <div>
+                    <h1>Anforderungen</h1>
+                </div>
+                <ul>
+                   <li>Aktive Internetverbindung via WLAN</li> 
+                   <li>Smartphone mit IOS oder Android</li>
+                </ul>
+            </div>
+        </div>
+        <h1>Unsere Produkte</h1>
         <hr>
 
         <div class="container5">
