--- a/HTML/Team.html
+++ b/HTML/Team.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="uft-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +25,104 @@
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
 
+    <h1 class="center">Organisation Schuber Lampen</h1>
+    <hr>
+    <br>
+    <div class="teamcontainer">
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Thomas H&ouml;chli</h1>
+                CEO Schuber Lampen
+            </div>
+        </div>
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Silvio Muri</h1>
+                Leiter Administartion
+            </div>
+        </div>
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Fabian Steffen</h1>
+                Leiter Herstellung
+            </div>
+        </div>
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Peter Schaller</h1>
+                Leiter Vertrieb
+            </div>
+        </div>
+        <div class="teamitem" >
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Aninna Moor</h1>
+                Desing & Entwicklung
+            </div>
+        </div>
+    </div>
 
+    <h1 class="center">Organisation Schuber Holding</h1>
+    <hr>
+    <br>
+    <div class="teamcontainer">
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Thomas Mattmann</h1>
+                CEO Schuber Holding
+            </div>
+        </div>
+
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Stefen Kreier</h1>
+                CEO Schuber Holding
+            </div>
+        </div>
+
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Thomans H&ouml;li</h1>
+                Ceo Schuber Lampen
+            </div>
+        </div>
+
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Silvia Gerber</h1>
+                Ceo Schuber Garten
+            </div>
+        </div>
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Fabian Jenni</h1>
+                Ceo Schuber Schlaff
+            </div>
+        </div>
+        <div class="teamitem">
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Kurt Vonaltburg</h1>
+                Ceo Schuber K&uuml;chenbau
+            </div>
+        </div>
+        <div class="teamitem" >
+            <img src="https://source.unsplash.com/300x400/?person" alt="Thomas Mattmann">
+            <div>
+                <h1>Marianna Egli</h1>
+                Ceo Schuber Aufbewahrung
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="background-circle">
             <a href="index.html">
@@ -32,8 +130,8 @@
             </a>
         </div>
         <div class="footertext"></div>
-            <p> &copy; 2022 Schuber, Inc. <br>
-        </div>
+        <p> &copy; 2022 Schuber, Inc. <br>
+            </div>
         <div class="footer-container" id="navigation-container">
             <a href="privacy.html" class="footer-item">DATENSCHUTZRICHTLINIE</a>
             <a href="#" class="footer-item">NUTZUNGSBEDINGUNGEN</a>
@@ -43,7 +141,7 @@
 
         <div class="footer-container" id="navigation-container">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="blank">
-                <ion-icon class="footer-item" name="logo-youtube"></ion-icon>    
+                <ion-icon class="footer-item" name="logo-youtube"></ion-icon>
             </a>
             <a href="https://twitter.com/rickastley" target="blank">
                 <ion-icon href="#" class="footer-item" name="logo-twitter"></ion-icon>
@@ -55,7 +153,7 @@
                 <ion-icon href="#" class="footer-item" name="logo-instagram"></ion-icon>
             </a>
             <a href="https://www.reddit.com/user/ReallyRickAstley/" target="blank">
-                <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>  
+                <ion-icon href="#" class="footer-item" name="logo-reddit"></ion-icon>
             </a>
         </div>
     </footer>
